tests/error/new_prim.gw
#! [contains] primitive types cannot be used as reference
new int;
